[gd_scene load_steps=6 format=2]

[ext_resource path="res://resourses/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resourses/themes/default/styles/win_default.tres" type="StyleBox" id=2]
[ext_resource path="res://global_scripts/achv_cards/secondary/achv_card.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 14
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
use_filter = true
font_data = ExtResource( 1 )

[node name="AchvCard" type="PanelContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -36.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 36.0

[node name="Name" type="Label" parent="VB"]
margin_right = 200.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="Description" type="Label" parent="VB"]
margin_top = 21.0
margin_right = 200.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="DelayEnd" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="DelayEnd" to="." method="_on_DelayEnd_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
